# windows-wsl2-api-ai

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: main.tsx  styles.css  tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  db.rs  lib.rs  main.rs  models.rs  monitor.rs
